feat: 添加了部分项目管理接口
