# docs/swagger.json
@@ -4,6 +4,240 @@
         "contact": {}
     },
     "paths": {
+        "/create_proj": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "创建项目",
+                "parameters": [
+                    {
+                        "description": "项目名称，项目详情（可选），所属团队ID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.CreateProjQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.CreateProjA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.CreateProjA"
+                        }
+                    }
+                }
+            }
+        },
+        "/delete_proj": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "删除项目",
+                "parameters": [
+                    {
+                        "description": "项目ID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.DeleteProjQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.DeleteProjA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.DeleteProjA"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_proj_all": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "全部项目",
+                "parameters": [
+                    {
+                        "description": "无",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjAllQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjAllA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjAllA"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_proj_by_name": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "搜索框",
+                "parameters": [
+                    {
+                        "description": "项目名称（不一定是全名，子串搜索）",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjByNameQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjByNameA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjByNameA"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_proj_create": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "我创建的",
+                "parameters": [
+                    {
+                        "description": "无",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjCreateQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjCreateA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjCreateA"
+                        }
+                    }
+                }
+            }
+        },
+        "/get_proj_join": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "我参与的",
+                "parameters": [
+                    {
+                        "description": "无",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjJoinQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjJoinA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetProjJoinA"
+                        }
+                    }
+                }
+            }
+        },
         "/info": {
             "post": {
                 "consumes": [
@@ -68,6 +302,45 @@
                 }
             }
         },
+        "/move_proj_to_bin": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "移入或移出回收站",
+                "parameters": [
+                    {
+                        "description": "项目ID",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.MoveProjBinQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MoveProjBinA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.MoveProjBinA"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "consumes": [
@@ -99,9 +372,74 @@
                     }
                 }
             }
+        },
+        "/update_proj": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Proj1"
+                ],
+                "summary": "修改项目名称、项目描述",
+                "parameters": [
+                    {
+                        "description": "项目ID，项目名称（必填，可以填原名，不能和其他项目同名），项目详情（可选）",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.UpdateProjQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.UpdateProjA"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.UpdateProjA"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.Proj": {
+            "type": "object",
+            "properties": {
+                "groupID": {
+                    "description": "项目所属团队",
+                    "type": "integer"
+                },
+                "projID": {
+                    "type": "integer"
+                },
+                "projInfo": {
+                    "type": "string"
+                },
+                "projName": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "1 正常、2 回收站",
+                    "type": "integer"
+                },
+                "userID": {
+                    "description": "项目创建者",
+                    "type": "integer"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -130,6 +468,147 @@
                     "type": "string"
                 }
             }
+        },
+        "response.CreateProjA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.CreateProjQ": {
+            "type": "object",
+            "properties": {
+                "group_id": {
+                    "type": "integer"
+                },
+                "proj_info": {
+                    "type": "string"
+                },
+                "proj_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.DeleteProjA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.DeleteProjQ": {
+            "type": "object",
+            "properties": {
+                "proj_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.GetProjAllA": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "projs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Proj"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.GetProjAllQ": {
+            "type": "object"
+        },
+        "response.GetProjByNameA": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "projs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Proj"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.GetProjByNameQ": {
+            "type": "object",
+            "properties": {
+                "proj_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.GetProjCreateA": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "projs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Proj"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.GetProjCreateQ": {
+            "type": "object"
+        },
+        "response.GetProjJoinA": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "projs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Proj"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.GetProjJoinQ": {
+            "type": "object"
         },
         "response.GetUserInfoA": {
             "type": "object",
@@ -181,6 +660,25 @@
                 }
             }
         },
+        "response.MoveProjBinA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.MoveProjBinQ": {
+            "type": "object",
+            "properties": {
+                "proj_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "response.RegisterA": {
             "type": "object",
             "properties": {
@@ -199,6 +697,31 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.UpdateProjA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.UpdateProjQ": {
+            "type": "object",
+            "properties": {
+                "proj_id": {
+                    "type": "integer"
+                },
+                "proj_info": {
+                    "type": "string"
+                },
+                "proj_name": {
                     "type": "string"
                 }
             }
